# openlawsvpn-android

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  NOTICE.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
app/: build.gradle.kts  lint-baseline.xml  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
app/src/main/java/com/openlawsvpn/android/: App.kt  MainActivity.kt  ProfileManager.kt  SamlCallbackServer.kt  VpnConnectionService.kt
app/src/main/java/com/openlawsvpn/android/jni/: LibOpenLawsVpn.kt
app/src/main/java/com/openlawsvpn/android/model/: ConnectionState.kt  VpnProfile.kt
app/src/main/java/com/openlawsvpn/android/ui/: AboutFragment.kt  ConnectionFragment.kt  ConnectionViewModel.kt  LogFragment.kt  VpnProfileAdapter.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_stat_vpn.xml
app/src/main/res/layout/: activity_main.xml  fragment_about.xml  fragment_connection.xml  fragment_log.xml  item_vpn_profile.xml
app/src/main/res/menu/: bottom_nav.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/raw/: notice.txt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  network_security_config.xml
app/src/test/java/com/openlawsvpn/android/: ProfileManagerTest.kt  SamlCallbackServerTest.kt
app/src/test/java/com/openlawsvpn/android/model/: ConnectionStateTest.kt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 2.txt
fastlane/metadata/fdroid/: com.openlawsvpn.android.yml
scripts/: build-deps-android.sh
